[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/testing/TransformRotations.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/SourceCodePro.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/testing/test-mech/entities/NavPoint.tscn" type="PackedScene" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 1, 0, 0, 0.505882 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.1, 0.1, 0.01 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 1, 0.529412, 1 )
emission_enabled = true
emission = Color( 0, 1, 0.321569, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=5]

[sub_resource type="CubeMesh" id=6]
size = Vector3( 2, 1, 5 )

[sub_resource type="CubeMesh" id=7]
size = Vector3( 0.1, 2, 0.1 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.262745 )

[node name="TransformRotations" type="Spatial"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MouseMotion" type="Label" parent="CanvasLayer"]
margin_left = 24.0
margin_top = 127.0
margin_right = 155.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 2 )
text = "test"

[node name="Angles" type="Label" parent="CanvasLayer"]
margin_left = 23.0
margin_top = 334.0
margin_right = 218.0
margin_bottom = 398.0
custom_fonts/font = ExtResource( 2 )
text = "angle"

[node name="Pointer" type="Position2D" parent="CanvasLayer"]
position = Vector2( 800, 450 )

[node name="Line2D" type="Line2D" parent="CanvasLayer/Pointer"]
points = PoolVector2Array( 0, -10, 0, 10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 226101376

[node name="Line2D2" type="Line2D" parent="CanvasLayer/Pointer"]
points = PoolVector2Array( -10, 0, 10, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 394977664

[node name="LookRotator" type="Spatial" parent="."]

[node name="LookCube" type="MeshInstance" parent="LookRotator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.413, 10 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="LookRotator2" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="LookRotator2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.413, 10 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 12.1547 )
mesh = SubResource( 5 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 42.77, 0, -0.0971727 )
mesh = SubResource( 5 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.047 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="Body" type="Spatial" parent="."]

[node name="BodyMesh" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.53169 )
mesh = SubResource( 6 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.907766, 1.5087, 0.359465 )
visible = false
mesh = SubResource( 7 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.907766, 1.5087, 2.40109 )
visible = false
mesh = SubResource( 7 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.908, 1.509, 2.401 )
visible = false
mesh = SubResource( 7 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.908, 1.509, 0.359 )
visible = false
mesh = SubResource( 7 )
material/0 = null

[node name="MeshInstance5" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -4.26326e-14, 1.41297, 2.40241 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="CameraHolder" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.41297, 2.90708 )

[node name="Camera" type="Camera" parent="Body/CameraHolder"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="NavPoints" type="Spatial" parent="."]

[node name="NavPoint" parent="NavPoints" instance=ExtResource( 3 )]

